tests/paczka1/fuzzy1/47161554.err
Error in line 3: A326 A152 44,3
Error in line 6: vvEGAfZ1H A152 79,5
Error in line 11: rgpGt6bH A152 98,0
Error in line 18: A326 A934 55,7
Error in line 17: tQf5iM20iz A326 75,9
Error in line 29: vvEGAfZ1H A181 9,6
Error in line 33: vvEGAfZ1H A152 22,8
